@@ -85,3 +85,4 @@ devicesinlan 1.1.1 XXXXXXXX
 ===========================
 - Now, You don't need to be superuser to run DevicesInLan
 - Improved documentation and spanish translation
+- Netifaces removed
